# ros2rpi_4wheelsdrive

install/: local_setup.sh  setup.sh
install/rmitbot_bringup/share/rmitbot_bringup/: package.dsv  package.sh
install/rmitbot_controller/share/rmitbot_controller/: local_setup.sh  package.dsv  package.sh
install/rmitbot_description/share/rmitbot_description/: package.dsv  package.sh
install/rmitbot_firmware/share/rmitbot_firmware/: package.dsv  package.sh
install/rmitbot_localization/share/rmitbot_localization/: package.dsv  package.sh
log/: latest_build
src/rmitbot_bringup/launch/: realrobot.launch.py
src/rmitbot_controller/config/: rmitbot_controller.yaml
src/rmitbot_controller/launch/: teleopkeyboard.launch.py
src/rmitbot_description/: package.xml
src/rmitbot_description/launch/: display.launch.py  gazebo.launch.py
src/rmitbot_description/meshes/: base_link.stl  left_wheel1.stl  left_wheel2.stl  right_wheel1.stl  right_wheel2.stl
src/rmitbot_description/urdf/: rmitbot.urdf.xacro  rmitbot_gazebo.xacro  rmitbot_platform.xacro  rmitbot_ros2_control.xacro
