<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmitbot_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="xxx@gmail.com">xxx</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ==================================== -->
  <!-- Modifcation of .xml start here -->
  <!-- ==================================== -->
  <!-- Dependencies to be added for rviz launch file-->
  <!-- robot_state_publisher:     publish the TF of the robot, for rviz -->
  <!-- joint_state_publisher_gui: Set and publish the joint state, for rviz -->
  <!-- rviz2: rviz: visualization of graphical topic -->
  <!-- ros2launch: launching launch file -->
  <!-- ros_gz_sim: gazebo: physics engine -->

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <!-- xacro:           Calling xacro file for urdf -->
  <!-- ros_gz_bridge:   bridging information from gazebo and ros2 -->
  <!-- gz_ros2_control: loading pkg from ros2_control -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <!-- ==================================== -->
  <!-- Modifcation of .xml start here -->
  <!-- ==================================== -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>